# sigma-bake

./: CMakeLists.txt  bake.cmake
src/: bake_material.cpp  bake_mesh.cpp  bake_shader.cpp  bake_texture.cpp  glm_json.cpp  glm_json.hpp  main.cpp
